--- a/Exercise2/app/src/main/res/layout/activity_main.xml
+++ b/Exercise2/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    tools:context=".MainActivity" >
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_main"
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="com.example.lenovo.bai2_vongdoi.MainActivity">
-        <TextView
-            android:text="Demo Cycle Life"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:textStyle="normal|bold"
-            android:gravity="center"
-            android:textColor="@android:color/holo_green_dark"
-            android:textSize="30sp" />
-        <Button
-            android:text="Call Dialog"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btncall"
-            android:layout_gravity="center_horizontal"
-            android:textSize="24sp" />
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Demo Cycle Life"
+        android:textColor="#588759"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btnCall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="#C7C3C3"
+        android:text="CALL DIALONG"
+        android:textColor="#0F0D0D"
+        android:textSize="24sp" />
+</LinearLayout>
